--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -72,6 +72,14 @@ section {
 
 .row-fluid, .row {
   margin-left:0px;
+
+  &.row-no-margin {
+    margin: 0px;
+
+    [class*="span"] {
+      min-height: 0px
+    }
+  }
 }
 .center {
   text-align: center;
