--- a/app/views/projects/_project_flaggable.html.erb
+++ b/app/views/projects/_project_flaggable.html.erb
@@ -1,6 +1,16 @@
+
 <script type='text/javascript'>
 
 	$(function() {
+
+		$('.flag-reference').tooltip()
+		$('.flag-li').each(function(i, d) {
+			id = $(d).attr('data-flag-id')
+			index = $(d).attr('data-flag-index')
+			$('#flag-reference_'+id + ' sup').text("["+index+"]")
+		})
+
+
 		$('.flaggable').append("<span class='flag-links pull-right'> \
 			 <%= FlagType.all.map { |ft|  
 			 	"<a href='#' " + 
@@ -54,8 +64,6 @@
 					.children('.flag-links').toggleClass('flag-links-hover')
 				})
 			//.click()
-
-		$('.flag-reference').click(function() {$('#flags_tab').tab('show'); $("html, body").animate({ scrollTop: 0 }, "fast");}) //$('#'+this.href.substr(this.href.indexOf("#")+1)).prev().focus()})
 	})
 	
 
