--- a/app/views/projects/_project_loan_details.html.erb
+++ b/app/views/projects/_project_loan_details.html.erb
@@ -1,7 +1,7 @@
-<ul>
+<ul class='unstyled'>
   <b>Loan Type</b>
   <% @project.loan_detail do |t| %>
-    <li class="project-loan_details project-li flaggable" flaggable_type='
+    <li class="flaggable" flaggable_type='
       loan_details' flaggable_id=<%= t.id %>>
       <% if t.loan_type.nil? %>
       <% end %>
