--- a/app/views/review_entries/index.haml
+++ b/app/views/review_entries/index.haml
@@ -1,12 +1,90 @@
-- @review_entries.each do |r|
-  - if r.status == "OPEN"
-    =r.status
-    =r.item
-    %br/
+- provide :title, "Review Items"
+- provide :first_header, "Review Items"
 
-- @review_entries.each do |r|
-  - if r.status == "CLOSED"
-    =r.status
-    =r.serialized_item
-    %br/
+- @review_sections.each do |type, entries|
+  %h2= type.pluralize
+  %table{id: "#{type}", class: "table table-hover"}
+    - atts = entries.first.item.attributes
+    %thead
+      %tr
+        -# headers
+        %th id
+        - atts.delete("id")
+        - atts.delete("updated_at")
+        - atts.each do |key,value|
+          - case key
+          - when "flaggable_id"
+            %th= "Project"
+          - else
+            %th= key.humanize
+        -# for the checkbox
+        %th
+    %tbody
+      - entries.each_with_index do |entry,index|
+        %tr{id: "#{type}#{index}"}
+          %td= entry.id
+          - atts = entry.item.attributes
+          - atts.delete("id")
+          - atts.delete("updated_at")
+          - atts.each do |att|
+            - key = att[0]
+            - value = att[1]
+            - case key
+            - when "created_at"
+              %td= entry.created_at.to_s(:short)
+            - when "project_id"
+              %td= link_to(value, "/projects/#{value}")
+            - when "flaggable_id"
+              %td= link_to(value, "/projects/#{value}")
+            - else
+              %td= value
 
+          %td{class: "checkbox"}
+            %input{type: "checkbox", value: "yes"}
+
+  %button{id: "#{type}-Approve"}Approve
+  %button{id: "#{type}-Delete"}Delete
+
+:javascript
+  // grab all the buttons
+  $("button").each(function() {
+    $(this).click(function() {
+      //figure out the table name they are associated with
+      var split = this.id.split('-');
+      var class_name = split[0];
+      var approved = split[1];
+      var str = '#' + class_name + ' tr';
+      // send all the checked rows
+      $(str).filter(':has(:checkbox:checked)').each(function() {
+        $tr = $(this)
+        $('td', $tr).each(function() {
+          
+        });
+        console.log(approved);
+        manageRow(this, approved);
+      });
+
+    });
+  });
+  
+  function manageRow(row, approved){
+    var id = $(row).children()[0].innerHTML;
+    if (approved == "Approve")
+    {
+      var approve = { "approve": true };
+    }
+    else { var approve = "approve"; }
+    $.ajax({
+      url: id,
+      data: approve,
+      type: 'DELETE',
+      success: function(result) {
+      }
+    });
+    deleteRow(row.id);
+  }
+
+  function deleteRow(rowId){
+    var row = document.getElementById(rowId);
+    row.parentNode.removeChild(row);
+  }
