--- a/app/views/static_pages/bubbles.html.erb
+++ b/app/views/static_pages/bubbles.html.erb
@@ -1,4 +1,4 @@
 <% provide :title, "Big Picture" %>
-<% provide :header_content, "<h1>China in Africa</h1>" %>
+<% provide :header_content, "<h1>China in Africa</h1>".html_safe %>
 
 <%= render "analyze_js" %>
