--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -1,4 +1,4 @@
-<% @unset_data = "<span class='unset-data'>Unset</span>".html_safe %>
+<% @unset_data = "<span class='unset-data'>&mdash;</span>".html_safe %>
 <% @flag_counter = 0 %>
 <div class="project-page ">
 
