--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,8 +14,8 @@
 
           <ul class="nav pull-right">
                 <li><%= link_to "Home", root_path %> </li>
-                <li><%= link_to "Team", content_path("meet_the_team") %> </li>
-                <li><%= link_to "Methods", content_path("methodology") %> </li>
+                <li><%= link_to "Team", content_by_name_path("meet_the_team") %> </li>
+                <li><%= link_to "Methods", content_by_name_path("methodology") %> </li>
                 <li class="dropdown">
                   <a href="#" class='dropdown-toggle' data-toggle='dropdown'>
                     Data
@@ -24,12 +24,12 @@
                   <ul class='dropdown-menu'>
                     <li><%= link_to "Visualize", "#" %></li>
                     <li><%= link_to "Search",projects_path %></li>
-                    <li><%= link_to "Download", content_path("downloads") %></li>
+                    <li><%= link_to "Download", content_by_name_path("downloads") %></li>
                   </ul>
                 </li>
-                <li><%= link_to "Publications", content_path("publications") %> </li>
-                <li><%= link_to "Media", content_path("media") %> </li>
-                <li><%= link_to "Contact", content_path("contact") %> </li>
+                <li><%= link_to "Publications", content_by_name_path("publications") %> </li>
+                <li><%= link_to "Media", content_by_name_path("media") %> </li>
+                <li><%= link_to "Contact", content_by_name_path("contact") %> </li>
  
                 <li><a href='#'>Old menu items &rarr;</a></li>
                 <!-- Links for anyone !-->
