--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -71,35 +71,26 @@ EOS
 		<li class='span3'>
 			<a href="<%= bubbles_path %>" class="thumbnail">
 				<h4>See the Big Picture &rarr;</h4>
-				<%= image_tag("bubble_button.jpg", :alt => "Bubble Chart") %>
-				
+				<img src='holder.js/300x200'>
 				
 			</a>
 		</li>
 		<li class='span3'>
 			<a href="<%= map_path %>" class="thumbnail">
 				<h4>Country-Level Perspective &rarr;</h4>
-				<%= image_tag("map_button.jpg", :alt => "Map Overlay") %>
+				<img src='holder.js/300x200'>
 			</a>
 		</li>
-		<li class='span3' id='project_button' >
+		<li class='span3'>
 			<a href="<%= projects_path %>" class="thumbnail">
 				<h4>Project-Level Data &rarr;</h4>
-				<%= image_tag("project_animated.gif", :alt => "Project Pages", :class => "project_button_animated") %>
-				<script>$('.project_button_animated').hide()</script>
-				<%= image_tag("project_static.gif", :alt => "Project Pages", :class => "project_button_static") %>
+				<img src='holder.js/300x200'>
 			</a>
 		</li>
-		<script>$('#project_button').mouseover(function(){
-				$('.project_button_static').hide();
-				$('.project_button_animated').show();});
-                          $('#project_button').mouseout(function(){
-                          $('.project_button_animated').hide();
-                          $('.project_button_static').show();});</script>
 		<li class='span3'>
 			<a href="<%= aggregate_export_path %>" class="thumbnail">
 				<h4>Aggregated Data &rarr;</h4>
-				<%= image_tag("aggregate_button.jpg", :alt => "Aggregates") %>
+				<img src='holder.js/300x200'>
 			</a>
 		</li>
 	</ul>
