--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -96,6 +96,8 @@ EOS
 	</ul>
 </div>
 
+<%= render 'vital_stats' %>
+
 <div class='row-fluid' id='home_media'>
 	<div class='span12 row-fluid well'>
 		<div class='span4'>
