--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,8 +23,8 @@
                   </a>
                   <ul class='dropdown-menu'>
                     <li><%= link_to "Visualize", "#" %></li>
-                    <li><%= link_to "Search",projects_path %></li>
-                    <li><%= link_to "Download", content_by_name_path("downloads") %></li>
+                    <li><%= link_to "Search Projects",projects_path %></li>
+                    <li><%= link_to "Download Files", content_by_name_path("downloads") %></li>
                   </ul>
                 </li>
                 <li><%= link_to "Publications", content_by_name_path("publications") %> </li>
