First draft vitals

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -94,9 +94,11 @@ section {
   ul {
     li {
       color: #101010;
-      font-weight:  bolder;
+      //font-weight:  bold;
       font-size: 2em;
       line-height: 1.3;
+
+
     }
   }
 }
