Reformat header, Suz comments

--- a/app/views/projects/_search_result.html.erb
+++ b/app/views/projects/_search_result.html.erb
@@ -5,7 +5,7 @@
 	<td><%= link_to active_or_inactive(p), p %></td> 
 	<td><%= p.year ? p.year : '—' %></td>
 	<td><%= p.country_name.length>0 ? p.country_name.join(', ') : '—' %></td>
-	<td><%= p.usd_2009 ? p.usd_2009 : '—' %></td>
+	<td><%= p.usd_2009 ? "$#{number_with_precision(p.usd_2009, :precision => 2, :delimiter => ',')}" : '—' %></td>
 	<% if current_user && current_user.owner %>
 		<td>
 			<% if p.owner %>
@@ -20,6 +20,6 @@
 
 		</td>
 	<% else %>
-	<td></td>
+		<td></td>
 	<% end %>
 </tr>
