--- a/app/assets/stylesheets/layout/header.css.scss.erb
+++ b/app/assets/stylesheets/layout/header.css.scss.erb
@@ -6,9 +6,10 @@ header {
 	background-position: top center;
 	background-clip: border-box;
 	background-repeat: no-repeat;
-
+	background-size: 100%;
 	min-height: 100px; 
-	width: 100%;
+	//max-height: 320px;
+	
 
 
 	#logo {
