--- a/app/views/projects/_search_scope.html.erb
+++ b/app/views/projects/_search_scope.html.erb
@@ -7,7 +7,7 @@
 			scope_link = "<b>#{scope_link}</b>"
 		end
 
-		"<span class='scope-tooltip' title='#{scope.description}'>#{scope_link}</span>".html_safe
+		"<span class='scope-tooltip' title=\"#{scope.description}\">#{scope_link}</span>".html_safe
 
 	end
 	
