--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -44,10 +44,11 @@
             %li
               = link_to "Media", content_by_name_path("media")
             
-            - if signed_in? && current_user_is_aiddata
-              = render 'layouts/project_menu'
-              %li
-                = link_to "Edit site content", contents_path
+            - if signed_in? 
+              - if current_user_is_aiddata
+                = render 'layouts/project_menu'
+                %li
+                  = link_to "Edit site content", contents_path
               %li
                 = link_to "Sign out", signout_path, method: "delete"
             - else
