--- a/app/views/projects/_project.html.erb
+++ b/app/views/projects/_project.html.erb
@@ -4,19 +4,26 @@
 
 <% 
 header_content = <<EOS
-<h1 class='project-header'>
+<h1 class='project-header page-header'>
 	#{@project.title}
 	#{ if !@project.active
 		'<span id="inactive-project">(Inactive Record)</span>'
 	 end} 
+	 <br>
+	 <small>
+	 	#{@project.to_english(exclude_title: true)}
+	</small>
 </h1>
 
 EOS
 
-provide(:header_content, header_content.html_safe)
+# MOVED TO PAGE CONTENT
+# provide(:header_content, "<h1>Project Details</h1>".html_safe)
 
 %>
-
+<div class='row-fluid'>
+	<%= header_content.html_safe %>
+</div>
 <div class="row-fluid">
 
 
