--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -198,6 +198,10 @@ footer {
   }
 }
 
+.team-image {
+  max-height: 200px;
+  border: 1px solid #333;
+}
 
                     										/* forms */
 
