--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -30,7 +30,7 @@ end %>
 <div class='row'>
 	<div class='well well-small' style='display:none;text-align:center;' class='span12' id='project-facets-button'>
 
-		<button class='btn btn-primary' style='text-align:center;margin:5px;' onclick='toggle_search_params()'>Show Search Box</button>
+		<button class='btn btn-primary' style='text-align:center;margin:5px;' onclick='toggle_search_params()'>Show Filter Options</button>
 	</div>
 </div>
 
