--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -95,8 +95,9 @@ section {
     li {
       color: #101010;
       //font-weight:  bold;
-      font-size: 2em;
-      line-height: 1.3;
+      font-size: 1.3em;
+      margin-bottom: 8px;
+      border-bottom: 1px solid black;
 
 
     }
