--- a/app/views/static_pages/_download_data.html.erb
+++ b/app/views/static_pages/_download_data.html.erb
@@ -1,4 +1,3 @@
-      <h1>Download Datasets</h1>
       
 <%  
   csv_directory = Rails.root.join('public', 'downloads') + '*.csv'
@@ -23,13 +22,13 @@
       name = "Suspicious or Inactive Projects"
       order = 5
     else 
-      name = "#{File.basename(file).gsub(/\.csv/, '' ).humanize} Projects"
+      name = "#{File.basename(file).gsub(/\.csv/, '' ).humanize}"
       order = 6
     end
 
     link = '/downloads/' + File.basename(file)
     time = File.atime(file)
-    size = "#{'%.0f' % (File.size(file)/1000)} kb"
+    size = "#{'%.0f' % (File.size(file)/1000)}"
 
     csv_table_data << { name: name, link: link, time: time, size: size, order: order }
   end
@@ -38,22 +37,21 @@
 
 %>
 
+<%= javascript_include_tag 'bootstrap_sortable/index' %>
 
-<table id="download_table" align="center" class='table table-hover'>
+<table id="download_table" align="center" class='table table-hover sortable'>
 
   <!-- Table header -->
 
   <thead>
-    <tr style='background-color:#ccc'>
-      <th scope="col" id="header" align="center">Downloads</th>
-      <th></th>
-      <th></th>
-    </tr>
     <tr>
       <th>Filename</th>
       <th>File type</th>
+      <th>File size (kb)</th>
       <% if current_user_is_aiddata %>
-        <th><span id='last-updated' data-toggle="tooltip" title="Visible to AidData only." >Last Updated</span></th>
+        <th>
+          <span id='last-updated' data-toggle="tooltip" title="Visible to AidData only." >Last Updated</span>
+        </th>
       <% end %>
   </thead>
 
@@ -63,7 +61,8 @@
     <% csv_table_data.each do |file| %>
       <tr>
         <td><%= file[:name] %></td>
-        <td><%= link_to "CSV file",file[:link] %> (<%= file[:size] %>)</td>
+        <td><%= link_to "CSV file",file[:link] %> </td>
+        <td><%= file[:size] %></td>
         <% if current_user_is_aiddata %>
           <td><%= time_ago_in_words(file[:time]) %> ago </td>
         <% end %>
