--- a/app/views/static_pages/_vital_stats.html.haml
+++ b/app/views/static_pages/_vital_stats.html.haml
@@ -7,8 +7,9 @@
 
 %script#vitals-template{ type: 'text/template'}
 	.row-fluid
-		.span12.alert.alert-info
-			%h1
+		.span12
+			-#.alert.alert-info
+			%h3.text-info
 				Vital Stats:
 			%ul.unstyled
 				%li
@@ -25,8 +26,8 @@
 					of:
 					%span.official#usd_2009.text-success
 						$<%= nice_money(official.usd_2009) %>
-					%small 
-						(USD-2009)
+					-# %small 
+						-# (USD-2009)
 				%li
 					Financial value of all
 					%strong
@@ -34,23 +35,30 @@
 					projects:
 					%span.oda_like#usd_2009.text-success
 						$<%= nice_money(oda_like.usd_2009) %>
-					%small
-						(USD-2009)
+					-# %small
+						-# (USD-2009)
 				%li
-					Percentage of projects 
+					Projects 
 					%strong 
 						implemented or completed:
 					%span.implemented_or_completed#percent.text-success
 						<%= implemented_or_completed.percent %>%
 				%li 
-					Financial 
 					%strong 
-						value
-					of implemented and completed projects:
+						Value
+					of implemented/completed projects:
 					%span.implemented_or_completed#usd_2009.text-success<
 						$<%= nice_money(implemented_or_completed.usd_2009) %>
-					%small
-						(USD-2009)
+					-# %small
+						-# (USD-2009)
+				%li
+					%strong more...
+				%li
+					%strong more...
+				%li
+					%strong more...
+				%li
+					%strong more...
 
 
 
