--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -97,7 +97,7 @@ section {
       //font-weight:  bold;
       font-size: 1.3em;
       margin-bottom: 8px;
-      border-bottom: 1px solid black;
+      border-bottom: 1px solid #ddd;
 
 
     }
