--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,7 +13,8 @@ carousel = <<EOS
 		  </ol>
 		  <div class='carousel-inner'>
 		    <div class='active item'>
-	    	    <img src='holder.js/600x300'>
+	    	    <h1>Read the Working Paper</h1>
+	    	    #{image_tag "chinese_and_african_workers.jpg"}
 		    	<div class='carousel-caption'>
 		    		<h4>Your Home Page</h4>
 		    		<p>Guess what, we're starting on the new home page!!</p>
@@ -58,7 +59,7 @@ EOS
 
 home_thumbnails = <<EOS
 			<div class='home_thumbnails'>
-				<ul class='thumbnails row-fluid'>
+				<ul class='inline thumbnails row-fluid'>
 					<li class='span6'>
 						<a href="/content/using_the_data" class="with_shadow thumbnail">
 							<h4>How to Use the Data</h4>
@@ -72,6 +73,23 @@ home_thumbnails = <<EOS
 						</a>
 					</li>
 				</ul>
+			</div>
+EOS
+
+home_buttons = <<EOS
+			<div class='home_thumbnails'>
+				<div class='inline  row-fluid'>
+					<span class='span6'>
+						<a href="/content/using_the_data" class="with_shadow ">
+							<h4>How to Use the Data</h4>
+						</a>
+					</span>
+					<span class='span6'>
+						<a href="/content/improving_the_data" class="with_shadow ">
+							<h4>Help us Improve the Data</h4>
+						</a>
+					</span>
+				</div>
 			</div>
 EOS
 home_data_list = <<EOS
@@ -91,6 +109,8 @@ home_data_list = <<EOS
 
 EOS
 
+
+home_paragraph = ""
 %>
 
 <% provide(:header_content, header_content.html_safe) %>
@@ -99,9 +119,16 @@ EOS
 
 	<div class='row-fluid'>
 		<div class='span7 container-fluid'>
-			<%= carousel.html_safe %>
-			<%= home_data_list.html_safe %>
-
+			<div class='row-fluid'>
+				<h1 class='page-header'>Chinese Finance in Africa</h1>
+		
+				<p class='lead'>
+					In 2012, <a href='#'>AidData</a> set out to answer a fundamental question:
+				</p>
+				<p>
+					How can researchers and policymakers draw accurate conclusions about the nature, scope and effects of resource flows given that many “non-traditional” suppliers of development finance do not publish their project-level data? AidData began by developing a <strong>media-based data collection</strong> methodology to systematically track official Chinese development finance to Africa. This methodology relies on news reports and other publicly-available sources. The resulting database contains 1,7xx announced, initiated, and completed projects between 2000 and 2011, worth approximately $131 billion (2009 USD).  This china.aiddata.org site provides a multitude of resources for scholars, policymakers, and the general public to study and scrutinize China's development finance activities in Africa.
+				</p>
+			</div>
 		</div>
 		<div class='span5 container-fluid'>
 
@@ -112,7 +139,7 @@ EOS
 			</div>
 		</div>
 	</div>
-
+	<%= home_buttons.html_safe %>
 </div>
 
 <div class='row-fluid home_thumbnails'>
