Export email text

--- a/app/views/export_mailer/export_request.erb
+++ b/app/views/export_mailer/export_request.erb
@@ -1,7 +1,13 @@
-Your export is attached in CSV format.<br /><br />
+<h1>AidData Export</h1>
+Thanks for visiting <a href='http://china.aiddata.org'>China.AidData.org</a>.
+Your export is attached in CSV format.
+<br />
+<br />
 Alternately, click <%= link_to "here", root_url + @export.file_path %> to
-download your export.<br />
+download your export.
+<br />
 
-Be aware that the above link will be deactivated after twenty-four hours.
+The link will be <b>deactivated after 24 hours</b>.
 <br /><br />
--Aiddata
+Please feel free to contact us at <a href='mailto:china@aiddata.org'>china@aiddata.org</a> if you have any questions or concerns!
+<br>
