--- a/app/views/static_pages/_download_data.html.erb
+++ b/app/views/static_pages/_download_data.html.erb
@@ -7,7 +7,7 @@
   csv_links.each do |file|
     case file
     when /Official/
-      name = "Official finance"
+      name = "Official Finance"
       order = 1
     when /Unofficial/
       name = "Unofficial Finance"
