text on aggregate exporter

--- a/app/views/static_pages/_aggregate_exporter.html.haml
+++ b/app/views/static_pages/_aggregate_exporter.html.haml
@@ -3,10 +3,18 @@
 		%h3
 			1) Select your fields:
 		%p.muted
-			These fields will columns in the dataset 
+			These will be the 
 			%strong
-				and 
-			units of aggregation
+				columns
+			in your dataset.
+		%p.muted
+			Use the
+			%strong
+				Control 
+			or
+			%strong 
+				Shift
+			keys to select multiple options.
 
 	.span6.well
 		= label_tag "Data fields"
