--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -161,7 +161,7 @@ home_paragraph = ""
 		<li class='span3' id='project_button' >
 			<a href="<%= projects_path %>" class="thumbnail with_shadow">
 				<h4>Project-Level Data &rarr;</h4>
-				<%= image_tag("project_static.gif", :alt => "Project Pages") %>
+				<%= image_tag("project_button.jpg", :alt => "Project Pages") %>
 			</a>
 		</li>
 		<li class='span3'>
